[package]
name = "davenport"
version = "0.1.0"
description = "Ergonomic thread-local workspaces for intermediate data"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Andlon/davenport"
keywords = [ "thread-local", "workspace" ]
categories = [ "rust-patterns" ]
authors = [ "Andreas Longva" ]


[dependencies]
